# perplexity-cli-tool

./: .gitignore  Perplexity-CLI-Tool-Outline.md  README.md  fix_api_key.py  install.py  pplx  pplx.bat  pplx.ps1  pplx.py  pplx.sh  pyproject.toml  requirements.txt  setup.py
docs/: security_review.md
src/perplexity_cli/: __init__.py  api.py  cli.py  config.py  encoding_debug.py  formatters.py
