[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-cli"
version = "0.1.0"
description = "CLI tool for querying Perplexity API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.4.2",
    "pydantic>=2.0.0",
]

[project.scripts]
pplx = "src.perplexity_cli.cli:app"
perplexity = "src.perplexity_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_cli"]
